2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: Fix warnings when finalizing.

	* tests/contact-manager.c:
	* tests/Makefile.am:
	* configure.ac:
	* Makefile.am: Add a test program to track leaks.

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c: Fix ref count error for
	account objects.

	* libempathy/empathy-contact-manager.c: Disconnect signals from
	MissionControl object when finalising the contact manager.

	* configure.ac:
	* megaphone/src/megaphone-applet.c:
	* megaphone/src/Makefile.am:
	* megaphone/src/megaphone-applet.h:
	* megaphone/data/GNOME_Megaphone_Applet.schemas.in:
	* megaphone/data/Makefile.am:
	* megaphone/data/GNOME_Megaphone_Applet.server.in.in:
	* megaphone/data/GNOME_Megaphone_Applet.xml:
	* megaphone/Makefile.am:
	* nothere/src/nothere-applet.c:
	* nothere/src/Makefile.am:
	* nothere/src/nothere-applet.h:
	* nothere/data/Makefile.am:
	* nothere/data/GNOME_NotHere_Applet.server.in.in:
	* nothere/data/GNOME_NotHere_Applet.xml:
	* nothere/Makefile.am:
	* Makefile.am:
	* po/POTFILES.in:
	* po/POTFILES.skip: Add Megaphone and Nothere applets. Fixes bug
	#464954 (Raphael Slinckx, Xavier Claessens).

2007-09-20  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c:
	* libempathy/empathy-idle.c:
	* libempathy/empathy-idle.h:
	* doc/libempathy/tmpl/empathy-idle.sgml: Add 2 properties to EmpathyIdle
	to activate auto-away and auto-disconnect, default to off. Only empathy
	main client will turn them on, like that if other processes are
	running with an EmpathyIdle instance they won't change presence in the
	same time than Empathy client.

2007-09-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-smiley-manager.c: Fix a leak.

2007-09-11  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/empathy-group-chat.c:
	* libempathy-gtk/empathy-contact-list-view.c: